tests/type_tests/negatives/compose_non_unary_function.py
from pfun import compose


def f(a: int, b: int) -> int:
    pass


def g(a: int) -> int:
    pass


compose(f, g)
